tests/NormalTests/paczka1/fuzzy1/32396512.err
Error in line 8: S78: S6:3 76,5
Error in line 7: LFIQrOZ S789 169,4
Error in line 16: lytcXwXY S789 193,37
Error in line 5: S789 S789 65,5
Error in line 19: BizLhJ5 A948 91,8
Error in line 34: S789 A948 74,1
Error in line 12: lytcXwXY S789 40,1
